# SmallModels

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  main.py  pyproject.toml
examples/detection_recognition/: .gitignore  config.py  demo_detrecog.py  utils.py
examples/detection_recognition/fr_test/: face.py  face.rgb  main.py  model_modify.py
examples/face_detection/: README.md  camera.py  config.py  detector.py  download_model.py  main.py  visualizer.py
examples/face_detection/models/: .gitkeep
examples/target_following/: README.md  config.py  convert_reid_to_onnx.py  diagnose.py  download_mobilefacenet.py  download_models.py  download_movenet.py  download_osnet_reid.py  download_person_models.py  main.py  main_v2.py  profile_app.py
examples/target_following/core/: __init__.py  camera.py  controller.py  pan_tilt_controller.py  scene_state_machine.py  state_machine.py
examples/target_following/detectors/: __init__.py  color_histogram_reid.py  enhanced_reid.py  face_detector.py  face_recognizer.py  fused_recognizer.py  gesture_detector.py  mediapipe_pose_detector.py  mobilefacenet_recognizer.py  movenet_detector.py  multiview_recognizer.py  person_detector.py  person_reid_recognizer.py  shufflefacenet_recognizer.py  yolov5_person_detector.py  yunet_detector.py
examples/target_following/docs/: MULTIVIEW_TRACKING.md
examples/target_following/models/: .gitkeep
examples/target_following/tests/: benchmark.py  fix_debug.py  run_tests.py  test_color_histogram_reid.py  test_enhanced_fused.py  test_face.py  test_face_detection.py  test_face_recognition.py  (+9 more)
(+4 files in other folders)
