[project]
name = "smallmodels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mediapipe>=0.10.14",
    "numpy>=2.2.6",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.6",
    "opencv-python>=4.11.0.86",
    "ultralytics>=8.3.239",
]
