[project]
name = "smallmodels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gdown>=5.2.0",
    "mediapipe>=0.10.14",
    "numpy>=2.2.6",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.6",
    "opencv-python>=4.11.0.86",
    "pyserial>=3.5",
    "tensorboard>=2.20.0",
    "torchreid>=0.2.5",
    "ultralytics>=8.3.239",
]
